--- a/_includes/post-list-item.html
+++ b/_includes/post-list-item.html
@@ -1,6 +1,14 @@
 <div class="post">
     {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
     <span class="post-meta">{{ post.date | date: date_format }}</span>
+    <img src="{{ post.lead-image | relative_url }}" />
+
+    {% if (post.author != null) %}
+        {% include author.html name=post.author.name image=post.author.profile-image  %}
+
+        AUTHOR NAME: {{ post.author.name }}
+    {% endif %}
+
     <h3>Regular
         <a class="post-link" href="{{ post.url | relative_url }}">
         {{ post.title | escape }}
