--- a/_includes/list-post.html
+++ b/_includes/list-post.html
@@ -1,12 +1,13 @@
-<div class="post post-featured">
+<div class="post">
     {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
     <span class="post-meta">{{ post.date | date: date_format }}</span>
-    <h1>
-        Featured
+    <img src="{{ post.lead-image | relative_url }}" />
+
+    <h3>Regular
         <a class="post-link" href="{{ post.url | relative_url }}">
         {{ post.title | escape }}
         </a>
-    </h1>
+    </h3>
     {%- if site.show_excerpts -%}
         {{ post.excerpt }}
     {%- endif -%}
